// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> matches children avatar snapshot 1`] = `
<div>
  <figure
    class="my-avatar css-1iimepg-avatar-avatar"
    id="my-id"
  >
    <span
      data-testid="avatar-children-container"
    >
      AB
    </span>
  </figure>
</div>
`;

exports[`<Avatar /> matches image avatar snapshot 1`] = `
<div>
  <figure
    class="my-image-avatar css-z2c8x2-avatar-avatar"
  >
    <img
      alt="My avatar"
      src="path/to/image.png"
    />
  </figure>
</div>
`;
